--- a/style/less/includes/main.less
+++ b/style/less/includes/main.less
@@ -43,7 +43,8 @@ body {
 	
 				div {
 					display: flex;
-					gap: @bigger-gap;
+					gap: @md-gap @bigger-gap;
+					flex-wrap: wrap;
 				}
 				
 				span {
